все сломалось, ничего не работает, как же это все задолбало, пожалуйста помогите

--- a/labs/Hetchehog and Apples/SDLApples/SDLApples.cbp
+++ b/labs/Hetchehog and Apples/SDLApples/SDLApples.cbp
@@ -70,6 +70,7 @@
 		<Unit filename="engine/include/World.h" />
 		<Unit filename="engine/src/Body2D.cpp" />
 		<Unit filename="engine/src/World.cpp" />
+		<Unit filename="res/apple.bmp" />
 		<Unit filename="res/hg1.bmp" />
 		<Unit filename="res/hg2.bmp" />
 		<Unit filename="res/hg3.bmp" />
