--- a/labs/SDLHedgehog/SDLHedgehog.cbp
+++ b/labs/SDLHedgehog/SDLHedgehog.cbp
@@ -13,6 +13,9 @@
 				<Option compiler="gcc" />
 				<Option projectIncludeDirsRelation="2" />
 				<Compiler>
+					<Add option="-Weffc++" />
+					<Add option="-Wextra" />
+					<Add option="-Wall" />
 					<Add option="-g" />
 				</Compiler>
 			</Target>
@@ -45,6 +48,9 @@
 		<Unit filename="Apple.h" />
 		<Unit filename="Hedgehog.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="test/animation_test.cpp" />
+		<Unit filename="test/apple_test.cpp" />
+		<Unit filename="test/hedgehog_test.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
